# pdf_manager

./: .gitignore  README.md  pdf_manager.py  pyproject.toml  requirements.txt  setup.py  venv_setup.bat
pdf_manager/: __init__.py  pdf_manager.py
