[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf_manager"
version = "0.0.1"
authors = [
    { name="Zaid Shoufan", email="zaid@shou.fan" },
]
description = "`pdf_manager` is a python PDF manager that does it all."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    ]

[project.urls]
"Homepage" = "https://github.com/shoufanzaid/pdf_manager"
